<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NoInterNetConectivity"
    android:background="@color/background">

    <ImageView
        android:id="@+id/nointernet"
        android:contentDescription="@string/contentdesfornointernet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/nointernet"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/nointernettext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/nointernet"
        android:text="@string/whoops"
        android:textSize="32sp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="#000000"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/nointernettext"
        android:text="@string/nointernettext"
        android:textSize="16sp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="#000000"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"/>

</RelativeLayout>