<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SplashScreenActivity"
    android:background="@drawable/backgroundsplashscreen"
    android:id="@+id/root">

    <ImageView
        android:id="@+id/nameAndLogo"
        android:contentDescription="@string/contentDiscriptionfornameandLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/logoandname"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:visibility="visible"/>

    <TextView
        android:id="@+id/slogan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/slogan"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/nameAndLogo"
        android:layout_marginTop="-40dp"
        android:visibility="visible"/>

    <TextView
        android:id="@+id/from"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bysourabhverma"
        android:textColor="#000000"
        android:textSize="20sp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:textStyle="bold"
        android:layout_marginBottom="100dp"
        android:textAlignment="center"/>


</RelativeLayout>