<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@drawable/backgroundsplashscreen">


    <ImageView
        android:id="@+id/profileLogin"
        android:contentDescription="@string/contentdesforprofilelogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/linearlayoutlogin"
        android:layout_marginBottom="80dp"
        android:background="@drawable/loginactivityprofileimage"/>

    <LinearLayout
        android:id="@+id/linearlayoutlogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">

        <Button
            android:id="@+id/signInWithGoogle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/circle"
            android:text="@string/signinwithgoogle"
            android:textSize="15sp"
            android:drawableStart="@drawable/googlelogo"
            android:textAlignment="center"/>

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/circle"
            android:text="@string/ireadalltermsandcondition"
            android:textSize="15sp"
            android:visibility="visible"
            android:textAlignment="center"
            android:layout_marginTop="10dp" />

    </LinearLayout>


    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="invisible"/>


</RelativeLayout>