<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FindFriendsAfterLogin"
    android:background="@color/background">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/box"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/findfriends"
            android:textSize="32sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"/>

        <ImageView
            android:contentDescription="@string/findfriends"
            android:id="@+id/backbuttonfindfriendsafterlogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/backbutton"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="35dp"
            android:layout_marginStart="35dp"/>

        <TextView
            android:id="@+id/next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:textColor="@color/colorPrimary"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp"
            android:textSize="20sp"/>


    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="5dp">

        <EditText
            android:id="@+id/searchEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/searchbyemail"
            android:background="@drawable/searchedittext"
            android:padding="13dp"
            android:autofillHints="email"
            android:inputType="textEmailAddress"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/seatchButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/followbutton"
            android:text="@string/search"
            android:textColor="#FFFFFF"
            android:textAlignment="center"
            android:padding="0dp"/>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/linearLayout"
        android:layout_below="@+id/relativeLayout"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="10dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"/>


</RelativeLayout>