<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ShowAllFriendRequestActivity"
    android:background="@color/background">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/box"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true">

        <TextView
            android:id="@+id/checking"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/friendrequests"
            android:textSize="32sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"/>

        <ImageView
            android:contentDescription="@string/findfriends"
            android:id="@+id/backbuttonfindfriendsafterlogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/backbutton"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="35dp"
            android:layout_marginStart="35dp"/>


    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/relativeLayout"
        android:layout_marginTop="0dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"/>

    <ImageView
        android:id="@+id/forShowMore"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/boxforprofile"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:contentDescription="@string/follow"
        android:visibility="invisible"/>

    <LinearLayout
        android:id="@+id/touse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/imageView"
        android:layout_marginStart="30dp"
        android:layout_marginTop="15dp">

        <ImageView
            android:id="@+id/profileImageProfileBig"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:visibility="invisible"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp"
            android:layout_gravity="center">

            <TextView
                android:id="@+id/nameProfileBig"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="SOURABH KUMAR VERMA"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="15sp"
                android:layout_marginTop="5dp"
                android:visibility="invisible"/>

            <TextView
                android:id="@+id/emailProfileBig"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="SRBVERMA10@GMAIL.COM"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="15sp"
                android:layout_marginTop="5dp"
                android:visibility="invisible"/>

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/declinerequest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="DECLINE REQUEST"
        android:textStyle="bold"
        android:layout_below="@id/touse"
        android:textColor="@color/colorPrimaryDark"
        android:background="@drawable/borderonly"
        android:padding="15dp"
        android:layout_marginTop="10dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/showProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="SHOW PROFILE"
        android:textStyle="bold"
        android:layout_below="@id/declinerequest"
        android:textColor="@color/colorPrimaryDark"
        android:background="@drawable/borderonly"
        android:padding="15dp"
        android:layout_marginTop="10dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/reportUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="REPORT USER"
        android:textStyle="bold"
        android:layout_below="@id/showProfile"
        android:textColor="@color/colorPrimaryDark"
        android:background="@drawable/borderonly"
        android:padding="15dp"
        android:layout_marginTop="10dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:visibility="invisible"/>



</RelativeLayout>