<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ProfileFragment"
    android:background="@color/background">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/edit"
        android:background="@color/colorPrimary"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="50dp"
        android:layout_marginEnd="50dp">

    </com.google.android.material.floatingactionbutton.FloatingActionButton>

    <ImageView
        android:id="@+id/boxforProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/boxforprofile"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true" />

    <ImageView
        android:id="@+id/profileImageProfile"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/follow"
        android:layout_alignParentTop="true"/>

    <TextView
        android:id="@+id/nameprofile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:textSize="21sp"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        android:layout_below="@+id/profileImageProfile"
        android:layout_marginTop="10dp"
        android:maxLines="1"
        android:maxLength="20"/>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nameprofile"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true">

        <TextView
            android:id="@+id/postprofil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/post"
            android:textSize="20sp"
            android:layout_weight="1"
            android:textColor="@color/colorPrimary"
            android:textAlignment="center"
            android:visibility="invisible"
            />
        <TextView
            android:id="@+id/friendsprofile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/friends"
            android:textSize="20sp"
            android:layout_weight="1"
            android:textColor="@color/colorPrimary"
            android:textAlignment="center"
            android:visibility="invisible"
            />

        <TextView
            android:id="@+id/requestsprofile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/requests"
            android:textSize="20sp"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:visibility="invisible"
            />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout1"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true">

        <TextView
            android:id="@+id/numofpostprofile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_weight="1"
            android:textAlignment="center"
            />
        <TextView
            android:id="@+id/numoffriendsprofile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_weight="1"
            android:textAlignment="center"
            />
        <TextView
            android:id="@+id/numofrequestsprofile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_weight="1"
            android:textAlignment="center"
            />

    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/boxforProfile"
        android:background="@drawable/boxforprofileactivity"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:paddingTop="20dp"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:paddingBottom="5dp"
        android:scrollbars="none"
        android:layout_alignParentBottom="true"
        android:visibility="invisible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:gravity="center">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bio"/>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center_vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="BIO"
                        android:layout_marginStart="20dp"/>


                    <TextView
                        android:id="@+id/bio"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edittextforeditkprofile"
                        android:padding="15dp"
                        android:layout_marginStart="15dp"
                        android:layout_marginEnd="30dp"
                        android:maxLines="3"
                        android:maxLength="108"/>

                </LinearLayout>


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:gravity="center">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/dob"/>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center_vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="DATE OF BIRTH"
                        android:layout_marginStart="20dp"/>


                    <TextView
                        android:id="@+id/dob"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edittextforeditkprofile"
                        android:padding="15dp"
                        android:layout_marginStart="15dp"
                        android:layout_marginEnd="30dp"
                        android:maxLines="1"
                        android:maxLength="36"/>

                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:gravity="center">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/work"/>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center_vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="WORK"
                        android:layout_marginStart="20dp"/>


                    <TextView
                        android:id="@+id/work"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edittextforeditkprofile"
                        android:padding="15dp"
                        android:layout_marginStart="15dp"
                        android:layout_marginEnd="30dp"
                        android:maxLines="1"
                        android:maxLength="36"/>

                </LinearLayout>


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:gravity="center">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/studies"/>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center_vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="STUDIES AT"
                        android:layout_marginStart="20dp"/>


                    <TextView
                        android:id="@+id/studies"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edittextforeditkprofile"
                        android:padding="15dp"
                        android:layout_marginStart="15dp"
                        android:layout_marginEnd="30dp"
                        android:maxLines="1"
                        android:maxLength="36"/>

                </LinearLayout>


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:gravity="center">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/livesat"/>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center_vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="LIVES AT"
                        android:layout_marginStart="20dp"/>


                    <TextView
                        android:id="@+id/lives"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edittextforeditkprofile"
                        android:padding="15dp"
                        android:layout_marginStart="15dp"
                        android:layout_marginEnd="30dp"
                        android:maxLines="1"
                        android:maxLength="36"/>

                </LinearLayout>


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:gravity="center">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/from"/>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center_vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="FROM"
                        android:layout_marginStart="20dp"/>


                    <TextView
                        android:id="@+id/from"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edittextforeditkprofile"
                        android:padding="15dp"
                        android:layout_marginStart="15dp"
                        android:layout_marginEnd="30dp"
                        android:maxLines="1"
                        android:maxLength="36"/>

                </LinearLayout>


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:gravity="center">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/hobbies"/>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center_vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="HOBBIES"
                        android:layout_marginStart="20dp"/>


                    <TextView
                        android:id="@+id/hobbies"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edittextforeditkprofile"
                        android:padding="15dp"
                        android:layout_marginStart="15dp"
                        android:layout_marginEnd="30dp"
                        android:maxLines="1"
                        android:maxLength="36"/>

                </LinearLayout>


            </LinearLayout>



        </LinearLayout>

    </ScrollView>



</RelativeLayout>